Fixed spacing between liked list items

--- a/styles.css
+++ b/styles.css
@@ -471,7 +471,9 @@ input#search:focus {
 }
 
 .displayItem {
-    padding: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .displayItemTable {
